# scifit-sync

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: bootstrap-ecr.yml  deploy.yml  mlops.yml  test.yml
.serena/: project.yml
app/: .env.example  App.tsx  app.config.js  app.json  eas.json  jest.setup.js  package-lock.json  package.json  tsconfig.json
app/plugins/: withAndroidKotlinVersion.js
aws/policies/: README.md  ecr-lifecycle.json  github-actions-deploy-policy.json  github-oidc-trust-policy.json
docs/guides/: deployment.md  environment-setup.md  equipment-data-status.md  error-handling.md  mlops-cloud-quickstart.md  mlops-ingest-runbook.md  mlops-pipeline-test.md  mlops-query-categories.md  phase2-execution-runbook.md  testing-strategy.md
docs/handoff/: 2026-06-05-curated-72-final-mapping.csv  2026-06-05-curated-72-muscle-verification.md  2026-06-05-exercise-equipment-mislink-audit.md  2026-06-05-muscle-vocabulary-26.md  2026-06-05-workoutx-1283-mapping.csv  codex-review-1-design.md  (+12 more)
mlops/: .env.example  requirements.txt  run_2k.sh  run_3k.sh  run_curated_then_3k.sh  run_local_2k.sh
scripts/: integration_test.py
server/: .dockerignore  .env.example  Dockerfile  alembic.ini  create_tables.py  import_equipment_csv.py  mg_out.txt  muscle_groups_result.txt  requirements-dev.txt  requirements.txt  seed.py
tasks/: handoff-ab-test-embedding.md  plan-ab-test-embedding.md
(+327 files in other folders)
